[package]
name = "todo_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
tokio = { version = "1", features = ["full"] }

utoipa = { version = "4", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }

dotenv = "0.15"